# kwee

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  conanfile.txt  kwee.sln
3th_party/glad/: CMakeLists.txt
3th_party/glad/include/glad/: glad.h
3th_party/glad/src/: glad.c
Arrows/: Arrows.vcxproj  Arrows.vcxproj.filters  save.json
Arrows/src/: Grid.cpp  Grid.h  World.cpp  World.h  main.cpp  main.h
Arrows/src/elements/: And.cpp  Arrow.cpp  Arrow.h  Block.cpp  DoubleWire.cpp  Lever.cpp  Not.cpp  TreeWire.cpp  Wire.cpp
Pong/: Pong.vcxproj  Pong.vcxproj.filters
Pong/src/: Ball.h  GameScene.h  Slider.h  main.cpp
TestGame/: TestGame.vcxproj  TestGame.vcxproj.filters
TestGame/res/shaders/: collider_f.glsl  collider_v.glsl  colored_v.glsl  test_v.glsl
TestGame/src/: Cube.cpp  Cube.h  PlayerController.cpp  PlayerController.h  TestScene.h  main.cpp
docs/: .$systems.drawio.bkp  systems.drawio
include/kwee/core/: api.h
include/kwee/systems/: Application.h  PhysicEngine.h
kweeEngine/: kweeEngine.vcxproj  kweeEngine.vcxproj.filters  todo.txt
kweeEngine/include/kwee/: kwee.h
kweeEngine/include/kwee/core/: api.h
kweeEngine/include/kwee/game_primitives/: Camera.h  Collider.h  GameObject.h  Scene.h
kweeEngine/include/kwee/graphics/: Mesh.h  MeshRenderer.h  Renderer.h  Shader.h
kweeEngine/include/kwee/systems/: Application.h  Input.h  PhysicEngine.h  ResourceManager.h
kweeEngine/src/: Application.cpp  Camera.cpp  Collider.cpp  GameObject.cpp  Input.cpp  Mesh.cpp  MeshRenderer.cpp  PhysicEngine.cpp  ResourceManager.cpp  Scene.cpp  Shader.cpp  Texture.cpp  Transformable.cpp
kweeEngine/src/res/: standart_shaders.res.h
src/: Application.cpp  PhysicEngine.cpp  Scene.cpp
